# IndustryDB

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  example.config.toml  justfile  pyproject.toml  target.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  coverage.yml  release.yml
crates/industrydb-core/: CLAUDE.md  Cargo.toml
crates/industrydb-core/src/: config.rs  error.rs  factory.rs  lib.rs  traits.rs
crates/industrydb-mssql/: CLAUDE.md  Cargo.toml
crates/industrydb-mssql/src/: connector.rs  lib.rs  operations.rs
crates/industrydb-postgres/: CLAUDE.md  Cargo.toml
crates/industrydb-postgres/src/: connector.rs  lib.rs  operations.rs
crates/industrydb-py/: CLAUDE.md  Cargo.toml
crates/industrydb-py/src/: config.rs  connection.rs  errors.rs  lib.rs
crates/industrydb-sqlite/: CLAUDE.md  Cargo.toml
crates/industrydb-sqlite/src/: connector.rs  lib.rs  operations.rs
docs/: .gitignore  .npmrc  .prettierrc  QUICKSTART.md  README.md  index.md  justfile  package-lock.json  package.json
docs/.vitepress/: config.ts  en.ts  zh.ts
docs/en/: index.md
docs/en/guide/guide/: features.md  getting-started.md  what-is-industrydb.md
docs/guide/: getting-started.md
docs/zh/: index.md
docs/zh/guide/: features.md  what-is-industrydb.md
examples/: quickstart.py
python/industrydb/: CLAUDE.md  __init__.py  config.py  industrydb.pyi
tests/: test_basic.py
