[package]
name = "industrydb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait = "0.1"
tokio.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
