[package]
name = "industrydb-mssql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MSSQL connector for IndustryDB"

[dependencies]
industrydb-core = { path = "../industrydb-core" }
polars.workspace = true
tiberius = { version = "0.12", features = ["chrono", "tds73"] }
tokio.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
thiserror.workspace = true
async-trait = "0.1"
bb8 = "0.8"
bb8-tiberius = "0.15"

[dev-dependencies]
tokio-test = "0.4"
