[package]
name = "industrydb-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "industrydb"
crate-type = ["cdylib"]

[dependencies]
industrydb-core = { path = "../industrydb-core" }
industrydb-postgres = { path = "../industrydb-postgres" }
industrydb-sqlite = { path = "../industrydb-sqlite" }
industrydb-mssql = { path = "../industrydb-mssql" }
pyo3.workspace = true
polars.workspace = true
pythonize = "0.26"
tokio.workspace = true
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.21"
